# rote-mux

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  example.yaml  test_exit.py  test_exit.sh  test_exit2.py  test_exit3.py  test_yaml_parse.rs
.github/workflows/: ci.yml  release.yml
rbuf/: Cargo.toml
rbuf/src/: lib.rs
rote/: Cargo.toml
rote/src/: app.rs  config.rs  error.rs  lib.rs  panel.rs  process.rs  render.rs  service_manager.rs  signals.rs  task_manager.rs  tools.rs  ui.rs
rote/tests/: ignore_sigint_sleep.sh  integration_test.rs  process_tests.rs
rote/tests/data/: echo_exit.sh  example.yaml  ignores_all_signals.sh  respects_sigint.py  respects_sigint.sh  respects_sigterm.py  respects_sigterm.sh
rote/tests/data/scripts/: backend.sh  frontend.sh
scripts/: build.sh  clippy.sh  fmt.sh  local-ci.sh  test.sh
src/: config.rs  lib.rs  process.rs
tests/data/: example.yaml
tests/data/scripts/: setup.sh
