[package]
name = "rote"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.100"
nix = { version = "0.28", default-features = false, features = ["signal"] }
shell-words = "1.1.1"
