[package]
name = "rote"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
nix = { version = "0.28", features = ["signal"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync"] }
ratatui = "0.26"
ropey = "1.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shell-words = "1.1.1"
unicode-width = "0.1"
